<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#6A6E83"
    android:layout_margin="@dimen/_10sdp"
    >
    <TextView
        android:id="@+id/modeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chango"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="8"
        android:text="@string/eT"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toStartOf="@+id/close"
        app:layout_constraintStart_toStartOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageButton
        android:id="@+id/close"
        android:layout_width="@dimen/_33sdp"
        android:layout_height="@dimen/_33sdp"
        android:src="@drawable/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/_2sdp"
        android:padding="@dimen/_1sdp"
        android:background="#6A6E83"
        android:scaleType="fitXY"
        android:contentDescription="@string/image_description"
        />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:background="@drawable/roundbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eT1"
                android:layout_margin="@dimen/_3sdp"
                android:gravity="center"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/t1"
                android:id="@+id/l1"
                >
            <ImageView
                android:layout_gravity="center_vertical"
                android:id="@+id/i1"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_margin="@dimen/_5sdp"
                android:contentDescription="@string/image_description"
                android:background="@drawable/roundbg"
                android:layout_weight="1"
                />
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/i3"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_margin="@dimen/_5sdp"
                android:contentDescription="@string/image_description"
                android:background="@drawable/roundbg"
                android:layout_weight="1"
                />
            <ImageView
                android:id="@+id/i2"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_margin="@dimen/_5sdp"
                android:contentDescription="@string/image_description"
                android:background="@drawable/roundbg"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:gravity="center"
                android:text="@string/eT2"
                android:layout_below="@+id/l1"
                />
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>