<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6A6E83"
    android:id="@+id/main"
    >
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backToBattle"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/cancel"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:contentDescription="@string/image_description"
        />
    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/roundbg"
        android:gravity="center"
        android:padding="@dimen/_2sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/gold_icon"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:src="@drawable/coin"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:fontFamily="@font/chango"
            android:foregroundGravity="center"
            android:gravity="start"
            android:minWidth="@dimen/_110sdp"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:text="0"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_layout"
        android:background="@drawable/green_radial"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        >
        <LinearLayout
            android:id="@+id/shopBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_layout"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/inventory"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/blue"
                android:fontFamily="@font/chango"
                android:gravity="center"
                android:shadowColor="@color/black"
                android:shadowDx="8"
                android:shadowDy="8"
                android:shadowRadius="8"
                android:text="@string/inventory"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:contentDescription="@string/image_description"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cart"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:shadowDx="8"
                android:shadowDy="8"
                android:shadowRadius="8"
                android:shadowColor="@color/black"
                android:fontFamily="@font/chango"
                android:text="@string/cart"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:contentDescription="@string/image_description"
                android:background="@android:color/transparent"
                />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dataList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:layout_gravity="center"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>