<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainBattle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/radial_bg"
    tools:context="newCode.BattleActivity"
    >

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/trophy_bg"
        android:gravity="end"
        android:padding="@dimen/_2sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <TextView
            android:id="@+id/goldCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginEnd="-8dp"
            android:fontFamily="@font/chango"
            android:foregroundGravity="center"
            android:gravity="end"
            android:minWidth="@dimen/_110sdp"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:text="0"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:shadowRadius="8"
            android:shadowColor="@color/black"
            android:shadowDy="4"
            />

        <ImageView
            android:id="@+id/gold_icon"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:src="@drawable/coin"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout6"
        android:layout_width="0dp"
        android:layout_height="@dimen/_90sdp"
        android:layout_margin="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:background="@drawable/reward_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        >
        <ImageView
            android:id="@+id/ad_icon"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:src="@drawable/ad_icon"
            android:contentDescription="@string/image_description"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            />
        <TextView
            android:id="@+id/rewardTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ad"
            android:layout_below="@id/ad_icon"
            android:gravity="center"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:textColor="#FFFFFF"
            android:shadowColor="@color/black"
            android:shadowRadius="8"
            android:shadowDy="4"
            android:layout_centerInParent="true"
            android:textSize="@dimen/_14sdp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        app:layout_constraintEnd_toStartOf="@+id/setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_layout"
        android:background="@drawable/rank_item_bg"
        >

        <ImageView
            android:id="@+id/personImage"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            tools:ignore="ContentDescription"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/person"
            />

        <TextView
            android:id="@+id/UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_toEndOf="@id/personImage"
            android:fontFamily="@font/chango"
            android:text="User-Namee"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/setting"
        android:layout_width="@dimen/_38sdp"
        android:layout_height="@dimen/_38sdp"
        android:layout_margin="@dimen/_4sdp"
        android:background="@drawable/setting"
        android:contentDescription="@string/image_description"
        android:padding="@dimen/_2sdp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_layout"
        tools:ignore="ContentDescription" />
    <!-- For left and right arrow for next page   -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mode_viewer"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_230sdp"
        android:foregroundGravity="bottom"
        app:layout_constraintBottom_toTopOf="@+id/battleBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout6"
        >
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/lock"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_60sdp"
        android:contentDescription="@string/image_description"
        android:foregroundGravity="bottom"
        app:layout_constraintBottom_toTopOf="@+id/battleBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout6"
        android:background="@drawable/lock"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/previousBtn"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/left_angle"
        android:clickable="true"
        android:contentDescription="@string/image_description"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/mode_viewer"
        app:layout_constraintEnd_toStartOf="@+id/mode_viewer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mode_viewer" />

    <!-- To start Battle  button  -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextBtn"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/right_angle"
        android:clickable="true"
        android:contentDescription="@string/image_description"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/mode_viewer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mode_viewer"
        app:layout_constraintTop_toTopOf="@+id/mode_viewer"
        app:layout_constraintVertical_bias="0.498"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/battleBtn"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_75sdp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/battlebtn"
        android:contentDescription="@string/image_description"
        android:fontFamily="@font/chango"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="8"
        android:shadowRadius="2"
        android:text="@string/battle"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableEnd="@drawable/coin"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingStart="@dimen/_1sdp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/gotoShop"
        android:layout_width="@dimen/_33sdp"
        android:layout_height="@dimen/_33sdp"
        android:layout_margin="@dimen/_4sdp"
        android:background="@drawable/cart"
        android:contentDescription="@string/image_description"
        android:padding="@dimen/_2sdp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toStartOf="@+id/top_layout"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/rewardBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout6"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_5sdp"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/later"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_30sdp"
            android:text="@string/later"
            android:textAllCaps="false"
            android:padding="@dimen/_7sdp"
            android:background="@drawable/later"
            android:textColor="@color/white"
            android:shadowRadius="8"
            android:shadowColor="@color/black"
            android:shadowDy="4"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/accept"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:text="@string/accept"
            android:textAllCaps="false"
            android:padding="@dimen/_7sdp"
            android:background="@drawable/accept"
            android:layout_marginStart="@dimen/_4sdp"
            android:textColor="@color/white"
            android:shadowRadius="8"
            android:shadowColor="@color/black"
            android:shadowDy="4"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>